v1.0.0/modules/schema/pages/class/GovSteam1.adoc
= `GovSteam1`
:toclevels: 4


+++Steam turbine governor, based on the GovSteamIEEE1 (with optional deadband and nonlinear valve gain added).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovSteam1`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovSteam1`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
GovSteam1 {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}























































AsynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TurbineLoadControllerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}






























GovSteam1 -> AsynchronousMachineDynamics: AsynchronousMachineDynamics


GovSteam1 -> TurbineLoadControllerDynamics: TurbineLoadControllerDynamics


GovSteam1 -> SynchronousMachineDynamics: SynchronousMachineDynamics


GovSteam1 -> DiagramObject: DiagramObjects


GovSteam1 -> InstanceSet: InstanceSet


GovSteam1 -> Name: Names


GovSteam1 -> ChangeSetMember: PropertiesCIMDataObject


GovSteam1 -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<db1,`db1`>>
| 0..1
| xref::class/Frequency.adoc[`Frequency`]
| +++Intentional deadband width (<i>db1</i>).  Unit = Hz.  Typical value = 0.+++

| <<db2,`db2`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Unintentional deadband (<i>db2</i>).  Unit = MW.  Typical value = 0.+++

| <<eps,`eps`>>
| 0..1
| xref::class/Frequency.adoc[`Frequency`]
| +++Intentional db hysteresis (<i>eps</i>).  Unit = Hz.  Typical value = 0.+++

| <<gv1,`gv1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 1 (<i>GV1</i>).  Typical value = 0.+++

| <<gv2,`gv2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 2 (<i>GV2</i>).  Typical value = 0,4.+++

| <<gv3,`gv3`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 3 (<i>GV3</i>).  Typical value = 0,5.+++

| <<gv4,`gv4`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 4 (<i>GV4</i>).  Typical value = 0,6.+++

| <<gv5,`gv5`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 5 (<i>GV5</i>).  Typical value = 1.+++

| <<gv6,`gv6`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 6 (<i>GV6</i>).  Typical value = 0.+++

| <<k,`k`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Governor gain (reciprocal of droop) (<i>K</i>) (&gt; 0).  Typical value = 25.+++

| <<k1,`k1`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of HP shaft power after first boiler pass (<i>K1</i>).  Typical value = 0,2.+++

| <<k2,`k2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of LP shaft power after first boiler pass (<i>K2</i>).  Typical value = 0.+++

| <<k3,`k3`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of HP shaft power after second boiler pass (<i>K3</i>).  Typical value = 0,3.+++

| <<k4,`k4`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of LP shaft power after second boiler pass (<i>K4</i>).  Typical value = 0.+++

| <<k5,`k5`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of HP shaft power after third boiler pass (<i>K5</i>).  Typical value = 0,5.+++

| <<k6,`k6`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of LP shaft power after third boiler pass (<i>K6</i>).  Typical value = 0.+++

| <<k7,`k7`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of HP shaft power after fourth boiler pass (<i>K7</i>).  Typical value = 0.+++

| <<k8,`k8`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of LP shaft power after fourth boiler pass (<i>K8</i>).  Typical value = 0.+++

| <<mwbase,`mwbase`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

| <<pgv1,`pgv1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 1 (<i>Pgv1</i>).  Typical value = 0.+++

| <<pgv2,`pgv2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 2 (<i>Pgv2</i>).  Typical value = 0,75.+++

| <<pgv3,`pgv3`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 3 (<i>Pgv3</i>).  Typical value = 0,91.+++

| <<pgv4,`pgv4`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 4 (<i>Pgv4</i>).  Typical value = 0,98.+++

| <<pgv5,`pgv5`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 5 (<i>Pgv5</i>).  Typical value = 1.+++

| <<pgv6,`pgv6`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 6 (<i>Pgv6</i>).  Typical value = 0.+++

| <<pmax,`pmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum valve opening (<i>Pmax</i>) (&gt; GovSteam1.pmin).  Typical value = 1.+++

| <<pmin,`pmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum valve opening (<i>Pmin</i>) (&gt;= 0 and &lt; GovSteam1.pmax).  Typical value = 0.+++

| <<sdb1,`sdb1`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Intentional deadband indicator.
true = intentional deadband is applied
false = intentional deadband is not applied.
Typical value = true.+++

| <<sdb2,`sdb2`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Unintentional deadband location.
true = intentional deadband is applied before point "A"
false = intentional deadband is applied after point "A".
Typical value = true.+++

| <<t1,`t1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Governor lag time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0.+++

| <<t2,`t2`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Governor lead time constant (<i>T2</i>) (&gt;= 0).  Typical value = 0.+++

| <<t3,`t3`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Valve positioner time constant (<i>T3) </i>(&gt; 0).  Typical value = 0,1.+++

| <<t4,`t4`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Inlet piping/steam bowl time constant (<i>T4</i>) (&gt;= 0).  Typical value = 0,3.+++

| <<t5,`t5`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of second boiler pass (<i>T5</i>) (&gt;= 0).  Typical value = 5.+++

| <<t6,`t6`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of third boiler pass (<i>T6</i>) (&gt;= 0).  Typical value = 0,5.+++

| <<t7,`t7`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of fourth boiler pass (<i>T7</i>) (&gt;= 0).  Typical value = 0.+++

| <<uc,`uc`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum valve closing velocity (<i>Uc</i>) (&lt; 0).  Unit = PU / s.  Typical value = -10.+++

| <<uo,`uo`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum valve opening velocity (<i>Uo</i>) (&gt; 0).  Unit = PU / s.  Typical value = 1.+++

| <<valve,`valve`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Nonlinear valve characteristic.
true = nonlinear valve characteristic is used
false = nonlinear valve characteristic is not used.
Typical value = true.+++

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#db1]
=== `db1`
+++Intentional deadband width (<i>db1</i>).  Unit = Hz.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.db1`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

//[discrete]
[#db2]
=== `db2`
+++Unintentional deadband (<i>db2</i>).  Unit = MW.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.db2`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#eps]
=== `eps`
+++Intentional db hysteresis (<i>eps</i>).  Unit = Hz.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.eps`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

//[discrete]
[#gv1]
=== `gv1`
+++Nonlinear gain valve position point 1 (<i>GV1</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.gv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv2]
=== `gv2`
+++Nonlinear gain valve position point 2 (<i>GV2</i>).  Typical value = 0,4.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.gv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv3]
=== `gv3`
+++Nonlinear gain valve position point 3 (<i>GV3</i>).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.gv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv4]
=== `gv4`
+++Nonlinear gain valve position point 4 (<i>GV4</i>).  Typical value = 0,6.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.gv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv5]
=== `gv5`
+++Nonlinear gain valve position point 5 (<i>GV5</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.gv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv6]
=== `gv6`
+++Nonlinear gain valve position point 6 (<i>GV6</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.gv6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#k]
=== `k`
+++Governor gain (reciprocal of droop) (<i>K</i>) (&gt; 0).  Typical value = 25.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#k1]
=== `k1`
+++Fraction of HP shaft power after first boiler pass (<i>K1</i>).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#k2]
=== `k2`
+++Fraction of LP shaft power after first boiler pass (<i>K2</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#k3]
=== `k3`
+++Fraction of HP shaft power after second boiler pass (<i>K3</i>).  Typical value = 0,3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k3`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#k4]
=== `k4`
+++Fraction of LP shaft power after second boiler pass (<i>K4</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k4`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#k5]
=== `k5`
+++Fraction of HP shaft power after third boiler pass (<i>K5</i>).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k5`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#k6]
=== `k6`
+++Fraction of LP shaft power after third boiler pass (<i>K6</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k6`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#k7]
=== `k7`
+++Fraction of HP shaft power after fourth boiler pass (<i>K7</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k7`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#k8]
=== `k8`
+++Fraction of LP shaft power after fourth boiler pass (<i>K8</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k8`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pgv1]
=== `pgv1`
+++Nonlinear gain power value point 1 (<i>Pgv1</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pgv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv2]
=== `pgv2`
+++Nonlinear gain power value point 2 (<i>Pgv2</i>).  Typical value = 0,75.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pgv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv3]
=== `pgv3`
+++Nonlinear gain power value point 3 (<i>Pgv3</i>).  Typical value = 0,91.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pgv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv4]
=== `pgv4`
+++Nonlinear gain power value point 4 (<i>Pgv4</i>).  Typical value = 0,98.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pgv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv5]
=== `pgv5`
+++Nonlinear gain power value point 5 (<i>Pgv5</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pgv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv6]
=== `pgv6`
+++Nonlinear gain power value point 6 (<i>Pgv6</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pgv6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pmax]
=== `pmax`
+++Maximum valve opening (<i>Pmax</i>) (&gt; GovSteam1.pmin).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pmin]
=== `pmin`
+++Minimum valve opening (<i>Pmin</i>) (&gt;= 0 and &lt; GovSteam1.pmax).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#sdb1]
=== `sdb1`
+++Intentional deadband indicator.
true = intentional deadband is applied
false = intentional deadband is not applied.
Typical value = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.sdb1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#sdb2]
=== `sdb2`
+++Unintentional deadband location.
true = intentional deadband is applied before point "A"
false = intentional deadband is applied after point "A".
Typical value = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.sdb2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#t1]
=== `t1`
+++Governor lag time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t2]
=== `t2`
+++Governor lead time constant (<i>T2</i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t3]
=== `t3`
+++Valve positioner time constant (<i>T3) </i>(&gt; 0).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t4]
=== `t4`
+++Inlet piping/steam bowl time constant (<i>T4</i>) (&gt;= 0).  Typical value = 0,3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t5]
=== `t5`
+++Time constant of second boiler pass (<i>T5</i>) (&gt;= 0).  Typical value = 5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t6]
=== `t6`
+++Time constant of third boiler pass (<i>T6</i>) (&gt;= 0).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t6`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t7]
=== `t7`
+++Time constant of fourth boiler pass (<i>T7</i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t7`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#uc]
=== `uc`
+++Maximum valve closing velocity (<i>Uc</i>) (&lt; 0).  Unit = PU / s.  Typical value = -10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.uc`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#uo]
=== `uo`
+++Maximum valve opening velocity (<i>Uo</i>) (&gt; 0).  Unit = PU / s.  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.uo`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#valve]
=== `valve`
+++Nonlinear valve characteristic.
true = nonlinear valve characteristic is used
false = nonlinear valve characteristic is not used.
Typical value = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.valve`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===


