v1.1.0/modules/schema/pages/class/GovSteam1.adoc
= `GovSteam1`
:toclevels: 4


+++Steam turbine governor, based on the GovSteamIEEE1 (with optional deadband and nonlinear valve gain added).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovSteam1`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovSteam1`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<db1,`db1`>>
//| [[slots_table.db1]]<<db1,`db1`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Intentional deadband width (<i>db1</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<db2,`db2`>>
//| [[slots_table.db2]]<<db2,`db2`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Unintentional deadband (<i>db2</i>).  Unit = MW.  Typical value = 0.+++
| _n/a_

| <<eps,`eps`>>
//| [[slots_table.eps]]<<eps,`eps`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Intentional db hysteresis (<i>eps</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<gv1,`gv1`>>
//| [[slots_table.gv1]]<<gv1,`gv1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 1 (<i>GV1</i>).  Typical value = 0.+++
| _n/a_

| <<gv2,`gv2`>>
//| [[slots_table.gv2]]<<gv2,`gv2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 2 (<i>GV2</i>).  Typical value = 0,4.+++
| _n/a_

| <<gv3,`gv3`>>
//| [[slots_table.gv3]]<<gv3,`gv3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 3 (<i>GV3</i>).  Typical value = 0,5.+++
| _n/a_

| <<gv4,`gv4`>>
//| [[slots_table.gv4]]<<gv4,`gv4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 4 (<i>GV4</i>).  Typical value = 0,6.+++
| _n/a_

| <<gv5,`gv5`>>
//| [[slots_table.gv5]]<<gv5,`gv5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 5 (<i>GV5</i>).  Typical value = 1.+++
| _n/a_

| <<gv6,`gv6`>>
//| [[slots_table.gv6]]<<gv6,`gv6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain valve position point 6 (<i>GV6</i>).  Typical value = 0.+++
| _n/a_

| <<k,`k`>>
//| [[slots_table.k]]<<k,`k`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Governor gain (reciprocal of droop) (<i>K</i>) (&gt; 0).  Typical value = 25.+++
| _n/a_

| <<k1,`k1`>>
//| [[slots_table.k1]]<<k1,`k1`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Fraction of HP shaft power after first boiler pass (<i>K1</i>).  Typical value = 0,2.+++
| _n/a_

| <<k2,`k2`>>
//| [[slots_table.k2]]<<k2,`k2`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Fraction of LP shaft power after first boiler pass (<i>K2</i>).  Typical value = 0.+++
| _n/a_

| <<k3,`k3`>>
//| [[slots_table.k3]]<<k3,`k3`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Fraction of HP shaft power after second boiler pass (<i>K3</i>).  Typical value = 0,3.+++
| _n/a_

| <<k4,`k4`>>
//| [[slots_table.k4]]<<k4,`k4`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Fraction of LP shaft power after second boiler pass (<i>K4</i>).  Typical value = 0.+++
| _n/a_

| <<k5,`k5`>>
//| [[slots_table.k5]]<<k5,`k5`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Fraction of HP shaft power after third boiler pass (<i>K5</i>).  Typical value = 0,5.+++
| _n/a_

| <<k6,`k6`>>
//| [[slots_table.k6]]<<k6,`k6`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Fraction of LP shaft power after third boiler pass (<i>K6</i>).  Typical value = 0.+++
| _n/a_

| <<k7,`k7`>>
//| [[slots_table.k7]]<<k7,`k7`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Fraction of HP shaft power after fourth boiler pass (<i>K7</i>).  Typical value = 0.+++
| _n/a_

| <<k8,`k8`>>
//| [[slots_table.k8]]<<k8,`k8`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Fraction of LP shaft power after fourth boiler pass (<i>K8</i>).  Typical value = 0.+++
| _n/a_

| <<mwbase,`mwbase`>>
//| [[slots_table.mwbase]]<<mwbase,`mwbase`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++
| _n/a_

| <<pgv1,`pgv1`>>
//| [[slots_table.pgv1]]<<pgv1,`pgv1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 1 (<i>Pgv1</i>).  Typical value = 0.+++
| _n/a_

| <<pgv2,`pgv2`>>
//| [[slots_table.pgv2]]<<pgv2,`pgv2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 2 (<i>Pgv2</i>).  Typical value = 0,75.+++
| _n/a_

| <<pgv3,`pgv3`>>
//| [[slots_table.pgv3]]<<pgv3,`pgv3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 3 (<i>Pgv3</i>).  Typical value = 0,91.+++
| _n/a_

| <<pgv4,`pgv4`>>
//| [[slots_table.pgv4]]<<pgv4,`pgv4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 4 (<i>Pgv4</i>).  Typical value = 0,98.+++
| _n/a_

| <<pgv5,`pgv5`>>
//| [[slots_table.pgv5]]<<pgv5,`pgv5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 5 (<i>Pgv5</i>).  Typical value = 1.+++
| _n/a_

| <<pgv6,`pgv6`>>
//| [[slots_table.pgv6]]<<pgv6,`pgv6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain power value point 6 (<i>Pgv6</i>).  Typical value = 0.+++
| _n/a_

| <<pmax,`pmax`>>
//| [[slots_table.pmax]]<<pmax,`pmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum valve opening (<i>Pmax</i>) (&gt; GovSteam1.pmin).  Typical value = 1.+++
| _n/a_

| <<pmin,`pmin`>>
//| [[slots_table.pmin]]<<pmin,`pmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum valve opening (<i>Pmin</i>) (&gt;= 0 and &lt; GovSteam1.pmax).  Typical value = 0.+++
| _n/a_

| <<sdb1,`sdb1`>>
//| [[slots_table.sdb1]]<<sdb1,`sdb1`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Intentional deadband indicator.
true = intentional deadband is applied
false = intentional deadband is not...+++
| _n/a_

| <<sdb2,`sdb2`>>
//| [[slots_table.sdb2]]<<sdb2,`sdb2`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Unintentional deadband location.
true = intentional deadband is applied before point "A"
false = intentional deadband is...+++
| _n/a_

| <<t1,`t1`>>
//| [[slots_table.t1]]<<t1,`t1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Governor lag time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<t2,`t2`>>
//| [[slots_table.t2]]<<t2,`t2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Governor lead time constant (<i>T2</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<t3,`t3`>>
//| [[slots_table.t3]]<<t3,`t3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Valve positioner time constant (<i>T3) </i>(&gt; 0).  Typical value = 0,1.+++
| _n/a_

| <<t4,`t4`>>
//| [[slots_table.t4]]<<t4,`t4`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Inlet piping/steam bowl time constant (<i>T4</i>) (&gt;= 0).  Typical value = 0,3.+++
| _n/a_

| <<t5,`t5`>>
//| [[slots_table.t5]]<<t5,`t5`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of second boiler pass (<i>T5</i>) (&gt;= 0).  Typical value = 5.+++
| _n/a_

| <<t6,`t6`>>
//| [[slots_table.t6]]<<t6,`t6`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of third boiler pass (<i>T6</i>) (&gt;= 0).  Typical value = 0,5.+++
| _n/a_

| <<t7,`t7`>>
//| [[slots_table.t7]]<<t7,`t7`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of fourth boiler pass (<i>T7</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<uc,`uc`>>
//| [[slots_table.uc]]<<uc,`uc`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum valve closing velocity (<i>Uc</i>) (&lt; 0).  Unit = PU / s.  Typical value = -10.+++
| _n/a_

| <<uo,`uo`>>
//| [[slots_table.uo]]<<uo,`uo`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum valve opening velocity (<i>Uo</i>) (&gt; 0).  Unit = PU / s.  Typical value = 1.+++
| _n/a_

| <<valve,`valve`>>
//| [[slots_table.valve]]<<valve,`valve`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Nonlinear valve characteristic.
true = nonlinear valve characteristic is used
false = nonlinear valve characteristic is...+++
| _n/a_

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
//| [[slots_table.AsynchronousMachineDynamics]]<<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1 +
xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
//| [[slots_table.TurbineLoadControllerDynamics]]<<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1 +
xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.AsynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#db1]
=== `db1`
+++Intentional deadband width (<i>db1</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.db1`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.db1,&#10548;>>
--
////


//[discrete]
[#db2]
=== `db2`
+++Unintentional deadband (<i>db2</i>).  Unit = MW.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.db2`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.db2,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#eps]
=== `eps`
+++Intentional db hysteresis (<i>eps</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.eps`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.eps,&#10548;>>
--
////


//[discrete]
[#gv1]
=== `gv1`
+++Nonlinear gain valve position point 1 (<i>GV1</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.gv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv1,&#10548;>>
--
////


//[discrete]
[#gv2]
=== `gv2`
+++Nonlinear gain valve position point 2 (<i>GV2</i>).  Typical value = 0,4.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.gv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv2,&#10548;>>
--
////


//[discrete]
[#gv3]
=== `gv3`
+++Nonlinear gain valve position point 3 (<i>GV3</i>).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.gv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv3,&#10548;>>
--
////


//[discrete]
[#gv4]
=== `gv4`
+++Nonlinear gain valve position point 4 (<i>GV4</i>).  Typical value = 0,6.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.gv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv4,&#10548;>>
--
////


//[discrete]
[#gv5]
=== `gv5`
+++Nonlinear gain valve position point 5 (<i>GV5</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.gv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv5,&#10548;>>
--
////


//[discrete]
[#gv6]
=== `gv6`
+++Nonlinear gain valve position point 6 (<i>GV6</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.gv6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv6,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#k]
=== `k`
+++Governor gain (reciprocal of droop) (<i>K</i>) (&gt; 0).  Typical value = 25.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k,&#10548;>>
--
////


//[discrete]
[#k1]
=== `k1`
+++Fraction of HP shaft power after first boiler pass (<i>K1</i>).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.k1,&#10548;>>
--
////


//[discrete]
[#k2]
=== `k2`
+++Fraction of LP shaft power after first boiler pass (<i>K2</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.k2,&#10548;>>
--
////


//[discrete]
[#k3]
=== `k3`
+++Fraction of HP shaft power after second boiler pass (<i>K3</i>).  Typical value = 0,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k3`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.k3,&#10548;>>
--
////


//[discrete]
[#k4]
=== `k4`
+++Fraction of LP shaft power after second boiler pass (<i>K4</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k4`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.k4,&#10548;>>
--
////


//[discrete]
[#k5]
=== `k5`
+++Fraction of HP shaft power after third boiler pass (<i>K5</i>).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k5`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.k5,&#10548;>>
--
////


//[discrete]
[#k6]
=== `k6`
+++Fraction of LP shaft power after third boiler pass (<i>K6</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k6`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.k6,&#10548;>>
--
////


//[discrete]
[#k7]
=== `k7`
+++Fraction of HP shaft power after fourth boiler pass (<i>K7</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k7`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.k7,&#10548;>>
--
////


//[discrete]
[#k8]
=== `k8`
+++Fraction of LP shaft power after fourth boiler pass (<i>K8</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.k8`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.k8,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.mwbase,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pgv1]
=== `pgv1`
+++Nonlinear gain power value point 1 (<i>Pgv1</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pgv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv1,&#10548;>>
--
////


//[discrete]
[#pgv2]
=== `pgv2`
+++Nonlinear gain power value point 2 (<i>Pgv2</i>).  Typical value = 0,75.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pgv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv2,&#10548;>>
--
////


//[discrete]
[#pgv3]
=== `pgv3`
+++Nonlinear gain power value point 3 (<i>Pgv3</i>).  Typical value = 0,91.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pgv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv3,&#10548;>>
--
////


//[discrete]
[#pgv4]
=== `pgv4`
+++Nonlinear gain power value point 4 (<i>Pgv4</i>).  Typical value = 0,98.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pgv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv4,&#10548;>>
--
////


//[discrete]
[#pgv5]
=== `pgv5`
+++Nonlinear gain power value point 5 (<i>Pgv5</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pgv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv5,&#10548;>>
--
////


//[discrete]
[#pgv6]
=== `pgv6`
+++Nonlinear gain power value point 6 (<i>Pgv6</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pgv6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv6,&#10548;>>
--
////


//[discrete]
[#pmax]
=== `pmax`
+++Maximum valve opening (<i>Pmax</i>) (&gt; GovSteam1.pmin).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmax,&#10548;>>
--
////


//[discrete]
[#pmin]
=== `pmin`
+++Minimum valve opening (<i>Pmin</i>) (&gt;= 0 and &lt; GovSteam1.pmax).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.pmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmin,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#sdb1]
=== `sdb1`
+++Intentional deadband indicator.
true = intentional deadband is applied
false = intentional deadband is not applied.
Typical value = true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.sdb1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.sdb1,&#10548;>>
--
////


//[discrete]
[#sdb2]
=== `sdb2`
+++Unintentional deadband location.
true = intentional deadband is applied before point "A"
false = intentional deadband is applied after point "A".
Typical value = true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.sdb2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.sdb2,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#t1]
=== `t1`
+++Governor lag time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t1,&#10548;>>
--
////


//[discrete]
[#t2]
=== `t2`
+++Governor lead time constant (<i>T2</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t2,&#10548;>>
--
////


//[discrete]
[#t3]
=== `t3`
+++Valve positioner time constant (<i>T3) </i>(&gt; 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t3,&#10548;>>
--
////


//[discrete]
[#t4]
=== `t4`
+++Inlet piping/steam bowl time constant (<i>T4</i>) (&gt;= 0).  Typical value = 0,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t4,&#10548;>>
--
////


//[discrete]
[#t5]
=== `t5`
+++Time constant of second boiler pass (<i>T5</i>) (&gt;= 0).  Typical value = 5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t5,&#10548;>>
--
////


//[discrete]
[#t6]
=== `t6`
+++Time constant of third boiler pass (<i>T6</i>) (&gt;= 0).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t6`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t6,&#10548;>>
--
////


//[discrete]
[#t7]
=== `t7`
+++Time constant of fourth boiler pass (<i>T7</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.t7`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t7,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineLoadControllerDynamics,&#10548;>>
--
////


//[discrete]
[#uc]
=== `uc`
+++Maximum valve closing velocity (<i>Uc</i>) (&lt; 0).  Unit = PU / s.  Typical value = -10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.uc`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.uc,&#10548;>>
--
////


//[discrete]
[#uo]
=== `uo`
+++Maximum valve opening velocity (<i>Uo</i>) (&gt; 0).  Unit = PU / s.  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.uo`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.uo,&#10548;>>
--
////


//[discrete]
[#valve]
=== `valve`
+++Nonlinear valve characteristic.
true = nonlinear valve characteristic is used
false = nonlinear valve characteristic is not used.
Typical value = true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam1.valve`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.valve,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
